[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/World/Viridian City/floor_tiles.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/World/Pallet Town/objects.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/World/Viridian City/wall_tiles.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/npc.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/player.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/World/Pewter City/Museum 1st floor.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 27.2926, 415.556 )

[node name="Museum 1st floor" type="Node2D"]
script = ExtResource( 6 )

[node name="floor" parent="." instance=ExtResource( 1 )]
tile_data = PoolIntArray( 196607, 22, 0, 262142, 22, 0, 262143, 22, 0, 196608, 22, 1, 196609, 22, 1, 196610, 22, 1, 196611, 22, 1, 196612, 22, 1, 196613, 22, 1, 196614, 22, 1, 196615, 22, 1, 196616, 22, 1, 196617, 22, 1, 196618, 22, 1, 196619, 22, 1, 196620, 22, 1, 196621, 22, 1, 196622, 22, 1, 196623, 22, 1, 196624, 22, 1, 196625, 22, 1, 196626, 22, 1, 196627, 22, 1, 196628, 22, 1, 196629, 22, 1, 196630, 22, 1, 196631, 22, 1, 196632, 22, 1, 327678, 22, 0, 327679, 22, 0, 262144, 22, 1, 262145, 22, 1, 262146, 22, 1, 262147, 22, 1, 262148, 22, 1, 262149, 22, 1, 262150, 22, 1, 262151, 22, 1, 262152, 22, 1, 262153, 22, 1, 262154, 22, 1, 262155, 22, 1, 262156, 22, 1, 262157, 22, 1, 262158, 22, 1, 262159, 22, 1, 262160, 22, 1, 262161, 22, 1, 262162, 22, 1, 262163, 22, 1, 262164, 22, 1, 262165, 22, 1, 262166, 22, 1, 262167, 22, 1, 262168, 22, 1, 393214, 22, 0, 393215, 22, 0, 327680, 22, 1, 327681, 22, 1, 327682, 22, 1, 327683, 22, 1, 327684, 22, 1, 327685, 22, 1, 327686, 22, 1, 327687, 22, 1, 327688, 22, 1, 327689, 22, 1, 327690, 22, 1, 327691, 22, 1, 327692, 22, 1, 327693, 22, 1, 327694, 22, 1, 327695, 22, 1, 327696, 22, 1, 327697, 22, 1, 327698, 22, 1, 327699, 22, 1, 327700, 22, 1, 327701, 22, 1, 327702, 22, 1, 327703, 22, 1, 327704, 22, 1, 458750, 22, 0, 458751, 22, 0, 393216, 22, 1, 393217, 22, 1, 393218, 22, 1, 393219, 22, 1, 393220, 22, 1, 393221, 22, 1, 393222, 22, 1, 393223, 22, 1, 393224, 22, 1, 393225, 22, 1, 393226, 22, 1, 393227, 22, 1, 393228, 22, 1, 393229, 22, 1, 393230, 22, 1, 393231, 22, 1, 393232, 22, 1, 393233, 22, 1, 393234, 22, 1, 393235, 22, 1, 393236, 22, 1, 393237, 22, 1, 393238, 22, 1, 393239, 22, 1, 393240, 22, 1, 524286, 22, 0, 524287, 22, 0, 458752, 22, 1, 458753, 22, 1, 458754, 22, 1, 458755, 22, 1, 458756, 22, 1, 458757, 22, 1, 458758, 22, 1, 458759, 22, 1, 458760, 22, 1, 458761, 22, 1, 458762, 22, 1, 458763, 22, 1, 458764, 22, 1, 458765, 22, 1, 458766, 22, 1, 458767, 22, 1, 458768, 22, 1, 458769, 22, 1, 458770, 22, 1, 458771, 22, 1, 458772, 22, 1, 458773, 22, 1, 458774, 22, 1, 458775, 22, 1, 458776, 22, 1, 589822, 22, 0, 589823, 22, 0, 524288, 22, 1, 524289, 22, 1, 524290, 22, 1, 524291, 22, 1, 524292, 22, 1, 524293, 22, 1, 524294, 22, 1, 524295, 22, 1, 524296, 22, 1, 524297, 22, 1, 524298, 22, 1, 524299, 22, 1, 524300, 22, 1, 524301, 22, 1, 524302, 22, 1, 524303, 22, 1, 524304, 22, 1, 524305, 22, 1, 524306, 22, 1, 524307, 22, 1, 524308, 22, 1, 524309, 22, 1, 524310, 22, 1, 524311, 22, 1, 524312, 22, 1, 655358, 22, 0, 655359, 22, 0, 589824, 22, 1, 589825, 22, 1, 589826, 22, 1, 589827, 22, 1, 589828, 22, 1, 589829, 22, 1, 589830, 22, 1, 589831, 22, 1, 589832, 22, 1, 589833, 22, 1, 589834, 22, 1, 589835, 22, 1, 589836, 22, 1, 589837, 22, 1, 589838, 22, 1, 589839, 22, 1, 589840, 22, 1, 589841, 22, 1, 589842, 22, 1, 589843, 22, 1, 589844, 22, 1, 589845, 22, 1, 589846, 22, 1, 589847, 22, 1, 589848, 22, 1, 720894, 22, 0, 720895, 22, 0, 655360, 22, 1, 655361, 22, 1, 655362, 22, 1, 655363, 22, 1, 655364, 22, 1, 655365, 22, 1, 655366, 22, 1, 655367, 22, 1, 655368, 22, 1, 655369, 22, 1, 655370, 22, 1, 655371, 22, 1, 655372, 22, 1, 655373, 22, 1, 655374, 22, 1, 655375, 22, 1, 655376, 22, 1, 655377, 22, 1, 655378, 22, 1, 655379, 22, 1, 655380, 22, 1, 655381, 22, 1, 655382, 22, 1, 655383, 22, 1, 655384, 22, 1, 786430, 22, 0, 786431, 22, 0, 720896, 22, 1, 720897, 22, 1, 720898, 22, 1, 720899, 22, 1, 720900, 22, 1, 720901, 22, 1, 720902, 22, 1, 720903, 22, 1, 720904, 22, 1, 720905, 22, 1, 720906, 22, 1, 720907, 22, 1, 720908, 22, 1, 720909, 22, 1, 720910, 22, 1, 720911, 22, 1, 720912, 22, 1, 720913, 22, 1, 720914, 22, 1, 720915, 22, 1, 720916, 22, 1, 720917, 22, 1, 720918, 22, 1, 720919, 22, 1, 720920, 22, 1, 851966, 22, 0, 851967, 22, 0, 786432, 22, 1, 786433, 22, 1, 786434, 22, 1, 786435, 22, 1, 786436, 22, 1, 786437, 22, 1, 786438, 22, 1, 786439, 22, 1, 786440, 22, 1, 786441, 22, 1, 786442, 22, 1, 786443, 22, 1, 786444, 22, 1, 786445, 22, 1, 786446, 22, 1, 786447, 22, 1, 786448, 22, 1, 786449, 22, 1, 786450, 22, 1, 786451, 22, 1, 786452, 22, 1, 786453, 22, 1, 786454, 22, 1, 786455, 22, 1, 786456, 22, 1, 851977, 22, 0 )

[node name="Wall" parent="." instance=ExtResource( 3 )]
tile_data = PoolIntArray( -393219, 10, 0, -393218, 10, 0, -393217, 10, 0, -458752, 10, 0, -458751, 10, 0, -458750, 10, 0, -458749, 10, 0, -458748, 10, 0, -458747, 10, 0, -458746, 10, 0, -458745, 10, 0, -458744, 10, 0, -458743, 10, 0, -458742, 10, 0, -458741, 10, 0, -458740, 10, 0, -458739, 10, 0, -458738, 10, 0, -458737, 10, 0, -458736, 10, 0, -458735, 10, 0, -458734, 10, 0, -458733, 10, 0, -458732, 10, 0, -458731, 10, 0, -458730, 10, 0, -458729, 10, 0, -458728, 10, 0, -458727, 10, 0, -458726, 10, 0, -327689, 10, 0, -327688, 10, 0, -327687, 10, 0, -327686, 10, 0, -327685, 10, 0, -327684, 10, 0, -327683, 10, 0, -327682, 10, 0, -327681, 10, 0, -393216, 10, 0, -393215, 10, 0, -393214, 10, 0, -393213, 10, 0, -393212, 10, 0, -393211, 10, 0, -393210, 10, 0, -393209, 10, 0, -393208, 10, 0, -393207, 10, 0, -393206, 10, 0, -393205, 10, 0, -393204, 10, 0, -393203, 10, 0, -393202, 10, 0, -393201, 10, 0, -393200, 10, 0, -393199, 10, 0, -393198, 10, 0, -393197, 10, 0, -393196, 10, 0, -393195, 10, 0, -393194, 10, 0, -393193, 10, 0, -393192, 10, 0, -393191, 10, 0, -393190, 10, 0, -393189, 10, 0, -393188, 10, 0, -393187, 10, 0, -393186, 10, 0, -262154, 10, 0, -262153, 10, 0, -262152, 10, 0, -262151, 10, 0, -262150, 10, 0, -262149, 10, 0, -262148, 10, 0, -262147, 10, 0, -262146, 10, 0, -262145, 10, 0, -327680, 10, 0, -327679, 10, 0, -327678, 10, 0, -327677, 10, 0, -327676, 10, 0, -327675, 10, 0, -327674, 10, 0, -327673, 10, 0, -327672, 10, 0, -327671, 10, 0, -327670, 10, 0, -327669, 10, 0, -327668, 10, 0, -327667, 10, 0, -327666, 10, 0, -327665, 10, 0, -327664, 10, 0, -327663, 10, 0, -327662, 10, 0, -327661, 10, 0, -327660, 10, 0, -327659, 10, 0, -327658, 10, 0, -327657, 10, 0, -327656, 10, 0, -327655, 10, 0, -327654, 10, 0, -327653, 10, 0, -327652, 10, 0, -327651, 10, 0, -327650, 10, 0, -196619, 10, 0, -196618, 10, 0, -196617, 10, 0, -196616, 10, 0, -196615, 10, 0, -196614, 10, 0, -196613, 10, 0, -196612, 10, 0, -196611, 10, 0, -196610, 10, 0, -196609, 10, 0, -262144, 10, 0, -262143, 10, 0, -262142, 10, 0, -262141, 10, 0, -262140, 10, 0, -262139, 10, 0, -262138, 10, 0, -262137, 10, 0, -262136, 10, 0, -262135, 10, 0, -262134, 10, 0, -262133, 10, 0, -262132, 10, 0, -262131, 10, 0, -262130, 10, 0, -262129, 10, 0, -262128, 10, 0, -262127, 10, 0, -262126, 10, 0, -262125, 10, 0, -262124, 10, 0, -262123, 10, 0, -262122, 10, 0, -262121, 10, 0, -262120, 10, 0, -262119, 10, 0, -262118, 10, 0, -262117, 10, 0, -262116, 10, 0, -262115, 10, 0, -262114, 10, 0, -131084, 10, 0, -131083, 10, 0, -131082, 10, 0, -131081, 10, 0, -131080, 10, 0, -131079, 10, 0, -131078, 10, 0, -131077, 10, 0, -131076, 10, 0, -131075, 10, 0, -131074, 10, 0, -131073, 10, 0, -196608, 10, 0, -196607, 10, 0, -196606, 10, 0, -196605, 10, 0, -196604, 10, 0, -196603, 10, 0, -196602, 10, 0, -196601, 10, 0, -196600, 10, 0, -196599, 10, 0, -196598, 10, 0, -196597, 10, 0, -196596, 10, 0, -196595, 10, 0, -196594, 10, 0, -196593, 10, 0, -196592, 10, 0, -196591, 10, 0, -196590, 10, 0, -196589, 10, 0, -196588, 10, 0, -196587, 10, 0, -196586, 10, 0, -196585, 10, 0, -196584, 10, 0, -196583, 10, 0, -196582, 10, 0, -196581, 10, 0, -196580, 10, 0, -196579, 10, 0, -196578, 10, 0, -196577, 10, 0, -65549, 10, 0, -65548, 10, 0, -65547, 10, 0, -65546, 10, 0, -65545, 10, 0, -65544, 10, 0, -65543, 10, 0, -65542, 10, 0, -65541, 10, 0, -65540, 10, 0, -65539, 10, 0, -65538, 10, 0, -65537, 10, 0, -131072, 10, 0, -131071, 10, 0, -131070, 10, 0, -131069, 10, 0, -131068, 10, 0, -131067, 10, 0, -131066, 10, 0, -131065, 10, 0, -131064, 10, 0, -131063, 10, 0, -131062, 10, 0, -131061, 10, 0, -131060, 10, 0, -131059, 10, 0, -131058, 10, 0, -131057, 10, 0, -131056, 10, 0, -131055, 10, 0, -131054, 10, 0, -131053, 10, 0, -131052, 10, 0, -131051, 10, 0, -131050, 10, 0, -131049, 10, 0, -131048, 10, 0, -131047, 10, 0, -131046, 10, 0, -131045, 10, 0, -131044, 10, 0, -131043, 10, 0, -131042, 10, 0, -131041, 10, 0, -13, 10, 0, -12, 10, 0, -11, 10, 0, -10, 10, 0, -9, 10, 0, -8, 10, 0, -7, 10, 0, -6, 10, 0, -5, 10, 0, -4, 10, 0, -3, 10, 0, -2, 10, 0, -1, 10, 0, -65536, 10, 0, -65535, 10, 0, -65534, 10, 0, -65533, 10, 0, -65532, 10, 0, -65531, 10, 0, -65530, 10, 0, -65529, 10, 0, -65528, 10, 0, -65527, 10, 0, -65526, 10, 0, -65525, 10, 0, -65524, 10, 0, -65523, 10, 0, -65522, 10, 0, -65521, 10, 0, -65520, 10, 0, -65519, 10, 0, -65518, 10, 0, -65517, 10, 0, -65516, 10, 0, -65515, 10, 0, -65514, 10, 0, -65513, 10, 0, -65512, 10, 0, -65511, 10, 0, -65510, 10, 0, -65509, 10, 0, -65508, 10, 0, -65507, 10, 0, -65506, 10, 0, -65505, 10, 0, 65523, 10, 0, 65524, 10, 0, 65525, 10, 0, 65526, 10, 0, 65527, 10, 0, 65528, 10, 0, 65529, 10, 0, 65530, 10, 0, 65531, 10, 0, 65532, 10, 0, 65533, 10, 0, 65534, 7, 2, 65535, 7, 3, 0, 7, 0, 1, 7, 1, 2, 7, 2, 3, 7, 3, 4, 7, 0, 5, 7, 1, 6, 7, 2, 7, 7, 3, 8, 7, 0, 9, 7, 1, 10, 7, 2, 11, 7, 3, 12, 7, 0, 13, 7, 1, 14, 7, 2, 15, 7, 3, 16, 7, 0, 17, 7, 1, 18, 7, 2, 19, 7, 3, 20, 7, 0, 21, 7, 1, 22, 7, 2, 23, 7, 3, 24, 7, 0, 25, 10, 0, 26, 10, 0, 27, 10, 0, 28, 10, 0, 29, 10, 0, 30, 10, 0, 31, 10, 0, 131059, 10, 0, 131060, 10, 0, 131061, 10, 0, 131062, 10, 0, 131063, 10, 0, 131064, 10, 0, 131065, 10, 0, 131066, 10, 0, 131067, 10, 0, 131068, 10, 0, 131069, 10, 0, 131070, 7, 65538, 131071, 7, 65539, 65536, 7, 65536, 65537, 7, 65537, 65538, 7, 65538, 65539, 7, 65539, 65540, 7, 65536, 65541, 7, 65537, 65542, 7, 65538, 65543, 7, 65539, 65544, 7, 65536, 65545, 7, 65537, 65546, 7, 65538, 65547, 7, 65539, 65548, 7, 65536, 65549, 7, 65537, 65550, 7, 65538, 65551, 7, 65539, 65552, 7, 65536, 65553, 7, 65537, 65554, 7, 65538, 65555, 7, 65539, 65556, 7, 65536, 65557, 7, 65537, 65558, 7, 65538, 65559, 7, 65539, 65560, 7, 65536, 65561, 10, 0, 65562, 10, 0, 65563, 10, 0, 65564, 10, 0, 65565, 10, 0, 65566, 10, 0, 65567, 10, 0, 196595, 10, 0, 196596, 10, 0, 196597, 10, 0, 196598, 10, 0, 196599, 10, 0, 196600, 10, 0, 196601, 10, 0, 196602, 10, 0, 196603, 10, 0, 196604, 10, 0, 196605, 10, 0, 196606, 7, 131074, 196607, 7, 131075, 131072, 7, 131072, 131073, 7, 131073, 131074, 7, 131074, 131075, 7, 131075, 131076, 7, 131072, 131077, 7, 131073, 131078, 7, 131074, 131079, 7, 131075, 131080, 7, 131072, 131081, 7, 131073, 131082, 7, 131074, 131083, 7, 131075, 131084, 7, 131072, 131085, 7, 131073, 131086, 7, 131074, 131087, 7, 131075, 131088, 7, 131072, 131089, 7, 131073, 131090, 7, 131074, 131091, 7, 131075, 131092, 7, 131072, 131093, 7, 131073, 131094, 7, 131074, 131095, 7, 131075, 131096, 7, 131072, 131097, 10, 0, 131098, 10, 0, 131099, 10, 0, 131100, 10, 0, 131101, 10, 0, 131102, 10, 0, 131103, 10, 0, 262131, 10, 0, 262132, 10, 0, 262133, 10, 0, 262134, 10, 0, 262135, 10, 0, 262136, 10, 0, 262137, 10, 0, 262138, 10, 0, 262139, 10, 0, 262140, 10, 0, 262141, 10, 0, 196608, 7, 196608, 196609, 7, 196609, 196610, 7, 196610, 196611, 7, 196611, 196612, 7, 196608, 196613, 7, 196609, 196614, 7, 196610, 196615, 7, 196611, 196616, 7, 196608, 196617, 7, 196609, 196618, 7, 196610, 196619, 7, 196611, 196620, 7, 196608, 196621, 7, 196609, 196622, 7, 196610, 196623, 7, 196611, 196624, 7, 196608, 196625, 11, 196608, 196626, 7, 196610, 196627, 7, 196611, 196628, 7, 196608, 196629, 7, 196609, 196630, 7, 196610, 196631, 7, 196611, 196632, 7, 196608, 196633, 10, 0, 196634, 10, 0, 196635, 10, 0, 196636, 10, 0, 196637, 10, 0, 196638, 10, 0, 196639, 10, 0, 327667, 10, 0, 327668, 10, 0, 327669, 10, 0, 327670, 10, 0, 327671, 10, 0, 327672, 10, 0, 327673, 10, 0, 327674, 10, 0, 327675, 10, 0, 327676, 10, 0, 327677, 10, 0, 262169, 10, 0, 262170, 10, 0, 262171, 10, 0, 262172, 10, 0, 262173, 10, 0, 262174, 10, 0, 262175, 10, 0, 393202, 10, 0, 393203, 10, 0, 393204, 10, 0, 393205, 10, 0, 393206, 10, 0, 393207, 10, 0, 393208, 10, 0, 393209, 10, 0, 393210, 10, 0, 393211, 10, 0, 393212, 10, 0, 393213, 10, 0, 327705, 10, 0, 327706, 10, 0, 327707, 10, 0, 327708, 10, 0, 327709, 10, 0, 327710, 10, 0, 327711, 10, 0, 458738, 10, 0, 458739, 10, 0, 458740, 10, 0, 458741, 10, 0, 458742, 10, 0, 458743, 10, 0, 458744, 10, 0, 458745, 10, 0, 458746, 10, 0, 458747, 10, 0, 458748, 10, 0, 458749, 10, 0, 393241, 10, 0, 393242, 10, 0, 393243, 10, 0, 393244, 10, 0, 393245, 10, 0, 393246, 10, 0, 393247, 10, 0, 524274, 10, 0, 524275, 10, 0, 524276, 10, 0, 524277, 10, 0, 524278, 10, 0, 524279, 10, 0, 524280, 10, 0, 524281, 10, 0, 524282, 10, 0, 524283, 10, 0, 524284, 10, 0, 524285, 10, 0, 458777, 10, 0, 458778, 10, 0, 458779, 10, 0, 458780, 10, 0, 458781, 10, 0, 458782, 10, 0, 458783, 10, 0, 589810, 10, 0, 589811, 10, 0, 589812, 10, 0, 589813, 10, 0, 589814, 10, 0, 589815, 10, 0, 589816, 10, 0, 589817, 10, 0, 589818, 10, 0, 589819, 10, 0, 589820, 10, 0, 589821, 10, 0, 524313, 10, 0, 524314, 10, 0, 524315, 10, 0, 524316, 10, 0, 524317, 10, 0, 524318, 10, 0, 524319, 10, 0, 524320, 10, 0, 655347, 10, 0, 655348, 10, 0, 655349, 10, 0, 655350, 10, 0, 655351, 10, 0, 655352, 10, 0, 655353, 10, 0, 655354, 10, 0, 655355, 10, 0, 655356, 10, 0, 655357, 10, 0, 589849, 10, 0, 589850, 10, 0, 589851, 10, 0, 589852, 10, 0, 589853, 10, 0, 589854, 10, 0, 589855, 10, 0, 589856, 10, 0, 720883, 10, 0, 720884, 10, 0, 720885, 10, 0, 720886, 10, 0, 720887, 10, 0, 720888, 10, 0, 720889, 10, 0, 720890, 10, 0, 720891, 10, 0, 720892, 10, 0, 720893, 10, 0, 655385, 10, 0, 655386, 10, 0, 655387, 10, 0, 655388, 10, 0, 655389, 10, 0, 655390, 10, 0, 655391, 10, 0, 655392, 10, 0, 786419, 10, 0, 786420, 10, 0, 786421, 10, 0, 786422, 10, 0, 786423, 10, 0, 786424, 10, 0, 786425, 10, 0, 786426, 10, 0, 786427, 10, 0, 786428, 10, 0, 786429, 10, 0, 720921, 10, 0, 720922, 10, 0, 720923, 10, 0, 720924, 10, 0, 720925, 10, 0, 720926, 10, 0, 720927, 10, 0, 720928, 10, 0, 851955, 10, 0, 851956, 10, 0, 851957, 10, 0, 851958, 10, 0, 851959, 10, 0, 851960, 10, 0, 851961, 10, 0, 851962, 10, 0, 851963, 10, 0, 851964, 10, 0, 851965, 10, 0, 786457, 10, 0, 786458, 10, 0, 786459, 10, 0, 786460, 10, 0, 786461, 10, 0, 786462, 10, 0, 786463, 10, 0, 786464, 10, 0, 917492, 10, 0, 917493, 10, 0, 917494, 10, 0, 917495, 10, 0, 917496, 10, 0, 917497, 10, 0, 917498, 10, 0, 917499, 10, 0, 917500, 10, 0, 917501, 10, 0, 917502, 10, 0, 917503, 10, 0, 851968, 10, 0, 851969, 10, 0, 851970, 10, 0, 851971, 10, 0, 851972, 10, 0, 851973, 10, 0, 851974, 10, 0, 851975, 10, 0, 851976, 10, 0, 851977, 10, 0, 851978, 10, 0, 851979, 10, 0, 851980, 10, 0, 851981, 10, 0, 851982, 10, 0, 851983, 10, 0, 851984, 10, 0, 851985, 10, 0, 851986, 10, 0, 851987, 10, 0, 851988, 10, 0, 851989, 10, 0, 851990, 10, 0, 851991, 10, 0, 851992, 10, 0, 851993, 10, 0, 851994, 10, 0, 851995, 10, 0, 851996, 10, 0, 851997, 10, 0, 851998, 10, 0, 851999, 10, 0, 852000, 10, 0, 983028, 10, 0, 983029, 10, 0, 983030, 10, 0, 983031, 10, 0, 983032, 10, 0, 983033, 10, 0, 983034, 10, 0, 983035, 10, 0, 983036, 10, 0, 983037, 10, 0, 983038, 10, 0, 983039, 10, 0, 917504, 10, 0, 917505, 10, 0, 917506, 10, 0, 917507, 10, 0, 917508, 10, 0, 917509, 10, 0, 917510, 10, 0, 917511, 10, 0, 917512, 10, 0, 917513, 10, 0, 917514, 10, 0, 917515, 10, 0, 917516, 10, 0, 917517, 10, 0, 917518, 10, 0, 917519, 10, 0, 917520, 10, 0, 917521, 10, 0, 917522, 10, 0, 917523, 10, 0, 917524, 10, 0, 917525, 10, 0, 917526, 10, 0, 917527, 10, 0, 917528, 10, 0, 917529, 10, 0, 917530, 10, 0, 917531, 10, 0, 917532, 10, 0, 917533, 10, 0, 917534, 10, 0, 917535, 10, 0, 917536, 10, 0, 1048564, 10, 0, 1048565, 10, 0, 1048566, 10, 0, 1048567, 10, 0, 1048568, 10, 0, 1048569, 10, 0, 1048570, 10, 0, 1048571, 10, 0, 1048572, 10, 0, 1048573, 10, 0, 1048574, 10, 0, 1048575, 10, 0, 983040, 10, 0, 983041, 10, 0, 983042, 10, 0, 983043, 10, 0, 983044, 10, 0, 983045, 10, 0, 983046, 10, 0, 983047, 10, 0, 983048, 10, 0, 983049, 10, 0, 983050, 10, 0, 983051, 10, 0, 983052, 10, 0, 983053, 10, 0, 983054, 10, 0, 983055, 10, 0, 983056, 10, 0, 983057, 10, 0, 983058, 10, 0, 983059, 10, 0, 983060, 10, 0, 983061, 10, 0, 983062, 10, 0, 983063, 10, 0, 983064, 10, 0, 983065, 10, 0, 983066, 10, 0, 983067, 10, 0, 983068, 10, 0, 983069, 10, 0, 983070, 10, 0, 983071, 10, 0, 983072, 10, 0, 1114102, 10, 0, 1114103, 10, 0, 1114104, 10, 0, 1114105, 10, 0, 1114106, 10, 0, 1114107, 10, 0, 1114108, 10, 0, 1114109, 10, 0, 1114110, 10, 0, 1114111, 10, 0, 1048576, 10, 0, 1048577, 10, 0, 1048578, 10, 0, 1048579, 10, 0, 1048580, 10, 0, 1048581, 10, 0, 1048582, 10, 0, 1048583, 10, 0, 1048584, 10, 0, 1048585, 10, 0, 1048586, 10, 0, 1048587, 10, 0, 1048588, 10, 0, 1048589, 10, 0, 1048590, 10, 0, 1048591, 10, 0, 1048592, 10, 0, 1048593, 10, 0, 1048594, 10, 0, 1048595, 10, 0, 1048596, 10, 0, 1048597, 10, 0, 1048598, 10, 0, 1048599, 10, 0, 1048600, 10, 0, 1048601, 10, 0, 1048602, 10, 0, 1048603, 10, 0, 1048604, 10, 0, 1048605, 10, 0, 1048606, 10, 0, 1048607, 10, 0, 1048608, 10, 0, 1179638, 10, 0, 1179639, 10, 0, 1179640, 10, 0, 1179641, 10, 0, 1179642, 10, 0, 1179643, 10, 0, 1179644, 10, 0, 1179645, 10, 0, 1179646, 10, 0, 1179647, 10, 0, 1114112, 10, 0, 1114113, 10, 0, 1114114, 10, 0, 1114115, 10, 0, 1114116, 10, 0, 1114117, 10, 0, 1114118, 10, 0, 1114119, 10, 0, 1114120, 10, 0, 1114121, 10, 0, 1114122, 10, 0, 1114123, 10, 0, 1114124, 10, 0, 1114125, 10, 0, 1114126, 10, 0, 1114127, 10, 0, 1114128, 10, 0, 1114129, 10, 0, 1114130, 10, 0, 1114131, 10, 0, 1114132, 10, 0, 1114133, 10, 0, 1114134, 10, 0, 1114135, 10, 0, 1114136, 10, 0, 1114137, 10, 0, 1114138, 10, 0, 1114139, 10, 0, 1114140, 10, 0, 1114141, 10, 0, 1114142, 10, 0, 1114143, 10, 0, 1114144, 10, 0, 1245177, 10, 0, 1245178, 10, 0, 1245179, 10, 0, 1245180, 10, 0, 1245181, 10, 0, 1245182, 10, 0, 1245183, 10, 0, 1179648, 10, 0, 1179649, 10, 0, 1179650, 10, 0, 1179651, 10, 0, 1179652, 10, 0, 1179653, 10, 0, 1179654, 10, 0, 1179655, 10, 0, 1179656, 10, 0, 1179657, 10, 0, 1179658, 10, 0, 1179659, 10, 0, 1179660, 10, 0, 1179661, 10, 0, 1179662, 10, 0, 1179663, 10, 0, 1179664, 10, 0, 1179665, 10, 0, 1179666, 10, 0, 1179667, 10, 0, 1179668, 10, 0, 1179669, 10, 0, 1179670, 10, 0, 1179671, 10, 0, 1179672, 10, 0, 1179673, 10, 0, 1179674, 10, 0, 1179675, 10, 0, 1179676, 10, 0, 1179677, 10, 0, 1179678, 10, 0, 1179679, 10, 0, 1179680, 10, 0, 1310715, 10, 0, 1310716, 10, 0, 1310717, 10, 0, 1310718, 10, 0, 1310719, 10, 0, 1245184, 10, 0, 1245185, 10, 0, 1245186, 10, 0, 1245187, 10, 0, 1245188, 10, 0, 1245189, 10, 0, 1245190, 10, 0, 1245191, 10, 0, 1245192, 10, 0, 1245193, 10, 0, 1245194, 10, 0, 1245195, 10, 0, 1245196, 10, 0, 1245197, 10, 0, 1245198, 10, 0, 1245199, 10, 0, 1245200, 10, 0, 1245201, 10, 0, 1245202, 10, 0, 1245203, 10, 0, 1245204, 10, 0, 1245205, 10, 0, 1245206, 10, 0, 1245207, 10, 0, 1245208, 10, 0, 1245209, 10, 0, 1245210, 10, 0, 1245211, 10, 0, 1245212, 10, 0, 1245213, 10, 0, 1245214, 10, 0, 1245215, 10, 0, 1245216, 10, 0, 1310727, 10, 0, 1310728, 10, 0, 1310729, 10, 0, 1310730, 10, 0, 1310731, 10, 0, 1310732, 10, 0, 1310733, 10, 0, 1310734, 10, 0, 1310735, 10, 0, 1310736, 10, 0, 1310737, 10, 0, 1310738, 10, 0, 1310739, 10, 0, 1310740, 10, 0, 1310741, 10, 0, 1310742, 10, 0 )

[node name="Inside objects" parent="." instance=ExtResource( 2 )]
scale = Vector2( 4, 4 )
collision_layer = 2
collision_mask = 2
tile_data = PoolIntArray( -786405, 45, 0, -720869, 45, 65536, -655333, 45, 131072, 13, 16, 0, 14, 16, 1, 15, 16, 2, 17, 16, 0, 18, 16, 1, 19, 16, 2, 21, 16, 0, 22, 16, 1, 23, 16, 2, 131070, 22, 0, 131071, 22, 1, 65549, 16, 65536, 65550, 16, 65537, 65551, 16, 65538, 65553, 16, 65536, 65554, 16, 65537, 65555, 16, 65538, 65557, 16, 65536, 65558, 16, 65537, 65559, 16, 65538, 196606, 22, 65536, 196607, 22, 65537, 131082, 48, 0, 131083, 48, 1, 131085, 16, 131072, 131086, 16, 131073, 131087, 16, 131074, 131089, 16, 131072, 131090, 16, 131073, 131091, 16, 131074, 131093, 16, 131072, 131094, 16, 131073, 131095, 16, 131074, 262142, 22, 131072, 262143, 22, 131073, 196618, 48, 65536, 196619, 48, 65537, 196628, 49, 0, 196629, 49, 1, 196630, 42, 0, 196631, 42, 1, 262145, 41, 0, 262146, 41, 1, 262147, 41, 2, 262148, 41, 3, 262149, 41, 4, 262154, 48, 65536, 262155, 48, 65537, 262156, 49, 0, 262157, 49, 1, 262164, 49, 65536, 262165, 49, 65537, 262166, 42, 65536, 262167, 42, 65537, 327681, 41, 65536, 327682, 41, 65537, 327683, 41, 65538, 327684, 41, 65539, 327685, 41, 65540, 327690, 48, 65536, 327691, 48, 65537, 327692, 49, 65536, 327693, 49, 65537, 327697, 43, 0, 327698, 43, 1, 327702, 42, 131072, 327703, 42, 131073, 393217, 41, 131072, 393218, 41, 131073, 393219, 41, 131073, 393220, 41, 131073, 393221, 41, 131076, 393226, 48, 65536, 393227, 48, 65537, 393228, 49, 0, 393229, 49, 1, 393233, 43, 65536, 393234, 43, 65537, 458762, 48, 65536, 458763, 48, 65537, 458764, 49, 65536, 458765, 49, 65537, 458772, 49, 0, 458773, 49, 1, 458774, 42, 0, 458775, 42, 1, 524289, 41, 0, 524290, 41, 1, 524291, 41, 2, 524292, 41, 3, 524293, 41, 4, 524298, 48, 327680, 524299, 48, 327681, 524300, 48, 327682, 524301, 48, 327682, 524302, 48, 327683, 524308, 49, 65536, 524309, 49, 65537, 524310, 42, 65536, 524311, 42, 65537, 589825, 41, 65536, 589826, 41, 65537, 589827, 41, 65538, 589828, 41, 65539, 589829, 41, 65540, 589834, 48, 393216, 589835, 48, 393217, 589836, 48, 393217, 589837, 48, 393218, 589838, 48, 393219, 589846, 42, 131072, 589847, 42, 131073, 720894, 22, 0, 720895, 22, 1, 655361, 41, 131072, 655362, 41, 131073, 655363, 41, 131073, 655364, 41, 131073, 655365, 41, 131076, 655371, 22, 0, 655372, 22, 1, 655373, 48, 458754, 655374, 48, 458755, 655381, 22, 0, 655382, 22, 1, 655383, 22, 0, 655384, 22, 1, 786430, 22, 65536, 786431, 22, 65537, 720907, 22, 65536, 720908, 22, 65537, 720909, 48, 458754, 720910, 48, 458755, 720917, 22, 65536, 720918, 22, 65537, 720919, 22, 65536, 720920, 22, 65537, 851966, 22, 131072, 851967, 22, 131073, 786443, 22, 131072, 786444, 22, 131073, 786445, 48, 524290, 786446, 48, 524291, 786453, 22, 131072, 786454, 22, 131073, 786455, 22, 131072, 786456, 22, 131073 )

[node name="Scientist" parent="." instance=ExtResource( 4 )]
position = Vector2( 725.513, 383.514 )
scale = Vector2( 3, 3 )
character = 4
number_of_character_in_dialogue = "Museum 1 Scientist1"
direction = "left"
advice_character = true

[node name="Scientist2" parent="." instance=ExtResource( 4 )]
position = Vector2( 1322.5, 590.436 )
scale = Vector2( 3, 3 )
character = 4
number_of_character_in_dialogue = "Museum 2 Scientist1"
direction = "left"
advice_character = true

[node name="Scientist3" parent="." instance=ExtResource( 4 )]
position = Vector2( 1339.45, 249.289 )
scale = Vector2( 3, 3 )
character = 4
number_of_character_in_dialogue = "Museum 2 Scientist3"
direction = "left"
regular_character = true

[node name="Scientist4" parent="." instance=ExtResource( 4 )]
position = Vector2( 955.921, 484.49 )
scale = Vector2( 3, 3 )
character = 4
number_of_character_in_dialogue = "Museum 2 Scientist4"
direction = "left"
receive_gift_from_npc = true

[node name="customer" parent="." instance=ExtResource( 4 )]
position = Vector2( -77.7113, 475.583 )
scale = Vector2( 3, 3 )
number_of_character_in_dialogue = "Museum 1 2"
regular_character = true

[node name="player" parent="." instance=ExtResource( 5 )]
position = Vector2( 1097.66, 762.721 )

[node name="not_able_to_cross" type="Area2D" parent="."]
position = Vector2( 449.657, 469.172 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="not_able_to_cross"]
shape = SubResource( 1 )
[connection signal="body_entered" from="player" to="." method="_on_player_body_entered"]
[connection signal="colliding" from="player" to="." method="_on_player_colliding"]
